--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -25,3 +25,4 @@
 <div class="toast-container position-fixed bottom-0 end-0 p-3" id="toast-placement"></div>
 
 <script src="../js/home.js" type="module"></script>
+<script src="../js/import.js" type="module"></script>
