Sign Up -> Sign In

--- a/public/pages/signIn.html
+++ b/public/pages/signIn.html
@@ -7,7 +7,7 @@
                     border: 2px solid black;
                     border-radius: 10px;
                 ">
-                <h1 class="text-center">Sign Up</h1>
+                <h1 class="text-center">Sign In</h1>
                 <p class="text-center">
                     Sie haben noch kein Konto?
                     <a href="index.html?page=signUp">Sign Up</a>
